index.html for url redirects to ngrok

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
       <meta http-equiv = "refresh" content = "2; url = https://8c73f59903fa.ngrok.io/" />
    </head>
    <body>
-      <p>Hello HTML5!</p>
+      <p>Hey there! Thanks for chossing to browse on my site. Redirecting you to homepage</p>
    </body>
 </html>
+
+<!-- this is a top level index page made solely for the purpose of redirecting to the ngrok link -->
