final edits to redirect page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Meta Tag</title>
+      <title>Redirect Page</title>
       <meta http-equiv = "refresh" content = "2; url = https://8c73f59903fa.ngrok.io/" />
    </head>
    <body>
-      <p>Hey there! Thanks for chossing to browse on my site. Redirecting you to homepage</p>
+      <p>Hey there! Thanks for chossing to browse on my site. Redirecting you to the homepage!</p>
    </body>
 </html>
 
