--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta http-equiv = "refresh" content = "2; url = https://8c73f59903fa.ngrok.io/" />
    </head>
    <body>
-      <p>Hey there! Thanks for chossing to browse on my site. Redirecting you to the homepage!</p>
+      <p>Hey there! Thanks for clicking on my site. Redirecting you to the homepage!</p>
    </body>
 </html>
 
