renaming redirect page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Redirect Page</title>
+      <title>Nihon No Uta: Redirect Page</title>
       <meta http-equiv = "refresh" content = "2; url = https://bce34e3fe051.ngrok.io/" />
    </head>
    <body>
