adding funny meme haha!

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
    </head>
    <body>
       <p>Hey there! Thanks for clicking on my site. Redirecting you to the homepage!</p>
+      <h2>This guy fucks !!</h2>
+      <a href="https://www.youtube.com/watch?v=_uMEE7eaaUA">It's a silicon valley ref</a>
+      <br>
+      <img src="img/me.jpg" style="align-items: center;" height="400px" width="400px">
+      <!-- <img src="" alt=""> -->
+      <h3>twitter:</h3><a href="https://twitter.com/Atharva93149016">Twitter profile</a>
+      <h3>facebook:</h3><a href="https://www.facebook.com/atharva.naik.391">FB profile</a>
    </body>
 </html>
 
