rickroll motha fu*ka

--- a/index.html
+++ b/index.html
@@ -5,14 +5,29 @@
       <meta http-equiv = "refresh" content = "2; url = https://21205f87b036.ngrok.io/" />
    </head>
    <body>
+      <!-- <source src="https://thumbs.gfycat.com/LastBrilliantElk-mobile.mp4" type="video/mp4" />  -->
       <p>Hey there! Thanks for clicking on my site. Redirecting you to the homepage!</p>
       <h2>This guy fucks !!</h2>
       <a href="https://www.youtube.com/watch?v=_uMEE7eaaUA">It's a silicon valley ref</a>
-      <br>
-      <img src="img/me.jpg" style="align-items: center;" height="400px" width="400px">
+      <p>
+         <h3>twitter:</h3><a href="https://twitter.com/Atharva93149016">Twitter profile</a>
+         <h3>facebook:</h3><a href="https://www.facebook.com/atharva.naik.391">FB profile</a>
+      </p>
+      <div>
+         <p style="float: left;"><img src="img/me.jpg" style="align-items: center;" height="400px" width="400px"></p> 
+            
+            <div>
+
+               <p style="margin-left: 30%;">
+                  <video controls="controls" autoplay="autoplay" loop="loop" width="720" height="405" preload="auto" title="Rick Roll">
+                     <source src="https://thumbs.gfycat.com/LastBrilliantElk-mobile.mp4" type="video/mp4"/>
+                  </video>
+               </p>
+            </div>
+      </div>
+      <!-- <video src="https://thumbs.gfycat.com/LastBrilliantElk-mobile.mp4" id="target_video"></video> -->
       <!-- <img src="" alt=""> -->
-      <h3>twitter:</h3><a href="https://twitter.com/Atharva93149016">Twitter profile</a>
-      <h3>facebook:</h3><a href="https://www.facebook.com/atharva.naik.391">FB profile</a>
+
    </body>
 </html>
 
